[package]
name = "dsa-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
slh-dsa = "0.0.3"
rand = "=0.8.5"

[[bench]]
name = "slhdsa_128f_bench"
harness = false

[[bench]]
name = "slhdsa_128s_bench"
harness = false

[[bench]]
name = "slhdsa_192f_bench"
harness = false

[[bench]]
name = "slhdsa_192s_bench"
harness = false

[[bench]]
name = "slhdsa_256f_bench"
harness = false

[[bench]]
name = "slhdsa_256s_bench"
harness = false
